mdapioutput/objects/VisitDialog_Sections__mdt.object
<CustomObject>
    <description>Mobile Visit Pop-up Section Setting</description>
    <fields>
        <fullName>ActivityLookupFieldAPI__c</fullName>
        <label>Activity Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BarcodeType__c</fullName>
        <label>Barcode Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code39</fullName>
                    <default>true</default>
                    <label>Code39</label>
                </value>
                <value>
                    <fullName>Code39Mod43</fullName>
                </value>
                <value>
                    <fullName>EAN-13</fullName>
                </value>
                <value>
                    <fullName>EAN-8</fullName>
                </value>
                <value>
                    <fullName>Code93</fullName>
                </value>
                <value>
                    <fullName>Code128</fullName>
                </value>
                <value>
                    <fullName>PDF417</fullName>
                </value>
                <value>
                    <fullName>QRCode</fullName>
                </value>
                <value>
                    <fullName>Aztec</fullName>
                </value>
                <value>
                    <fullName>Interleaved2of5</fullName>
                </value>
                <value>
                    <fullName>ITF14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ColumnNum__c</fullName>
        <label>Column Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardChart__c</fullName>
        <label>Dashboard Chart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DashboardFolder__c</fullName>
        <label>Dashboard Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard__c</fullName>
        <label>Dashboard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayFormat__c</fullName>
        <label>Display Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fields</fullName>
                    <default>true</default>
                    <label>Fields</label>
                </value>
                <value>
                    <fullName>Records</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>API Name is cloned from CORE_PDF_FieldTransformation__mdt</description>
        <label>PDF Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldsLayout__c</fullName>
        <label>Fields Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FilterFields__c</fullName>
        <label>Filter Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCreateAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleteAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFilterAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOrderCreateAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Create Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentLookupAPIName__c</fullName>
        <label>Lookup API Name to Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFieldQuery__c</fullName>
        <label>Product Field Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadOnlyAttribute__c</fullName>
        <label>Read Only Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordCondition__c</fullName>
        <label>Record Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedObjectRecordType__c</fullName>
        <label>Related Object Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedObject__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiredAttribute__c</fullName>
        <label>Required Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SearchObjectName__c</fullName>
        <label>Object to Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionLabel__c</fullName>
        <label>Section Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionOrder__c</fullName>
        <label>Section Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TabId__c</fullName>
        <label>Visit Dialog Tab</label>
        <referenceTo>VisitDialog_Tabs__mdt</referenceTo>
        <relationshipLabel>Visit Dialog Section Settings</relationshipLabel>
        <relationshipName>Visit_Preparation_Section_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TabUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TabUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransformationType__c</fullName>
        <label>Transformation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barcode</fullName>
                    <default>true</default>
                    <label>Barcode</label>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Visit Dialog Section Settings</label>
    <pluralLabel>Visit Dialog Section Settings</pluralLabel>
</CustomObject>